[gd_scene load_steps=2 format=3 uid="uid://c5xqkm8v3h2yt"]

[ext_resource type="Script" path="res://addons/game_tracker/demo/tracker_demo.gd" id="1_script"]

[node name="TrackerDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GameTracker Demo"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EndpointRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EndpointLabel" type="Label" parent="VBoxContainer/EndpointRow"]
layout_mode = 2
text = "Alloy Endpoint:"

[node name="EndpointInput" type="LineEdit" parent="VBoxContainer/EndpointRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://localhost:4318"

[node name="InitButton" type="Button" parent="VBoxContainer/EndpointRow"]
layout_mode = 2
text = "Initialize"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Not initialized"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LoggingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Logging"

[node name="LoggingButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LogInfo" type="Button" parent="VBoxContainer/LoggingButtons"]
layout_mode = 2
text = "Log Info"

[node name="LogWarn" type="Button" parent="VBoxContainer/LoggingButtons"]
layout_mode = 2
text = "Log Warn"

[node name="LogError" type="Button" parent="VBoxContainer/LoggingButtons"]
layout_mode = 2
text = "Log Error"

[node name="LogDebug" type="Button" parent="VBoxContainer/LoggingButtons"]
layout_mode = 2
text = "Log Debug"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MetricsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Metrics"

[node name="MetricsButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Increment" type="Button" parent="VBoxContainer/MetricsButtons"]
layout_mode = 2
text = "Increment"

[node name="Increment10" type="Button" parent="VBoxContainer/MetricsButtons"]
layout_mode = 2
text = "Increment +10"

[node name="Gauge" type="Button" parent="VBoxContainer/MetricsButtons"]
layout_mode = 2
text = "Gauge (random)"

[node name="Histogram" type="Button" parent="VBoxContainer/MetricsButtons"]
layout_mode = 2
text = "Histogram (random)"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TracingLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tracing"

[node name="TracingButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartSpan" type="Button" parent="VBoxContainer/TracingButtons"]
layout_mode = 2
text = "Start Span"

[node name="EndSpan" type="Button" parent="VBoxContainer/TracingButtons"]
layout_mode = 2
text = "End Span"

[node name="QuickSpan" type="Button" parent="VBoxContainer/TracingButtons"]
layout_mode = 2
text = "Quick Span (100ms)"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContextLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Context"

[node name="ContextButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SetUser" type="Button" parent="VBoxContainer/ContextButtons"]
layout_mode = 2
text = "Set User (random)"

[node name="SetContext" type="Button" parent="VBoxContainer/ContextButtons"]
layout_mode = 2
text = "Set Context"

[node name="SetTag" type="Button" parent="VBoxContainer/ContextButtons"]
layout_mode = 2
text = "Set Tag (random)"

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OutputRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="VBoxContainer/OutputRow"]
layout_mode = 2
text = "Output Log"

[node name="ClearLog" type="Button" parent="VBoxContainer/OutputRow"]
layout_mode = 2
text = "Clear"

[node name="LogOutput" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
placeholder_text = "Events will appear here..."

[connection signal="pressed" from="VBoxContainer/EndpointRow/InitButton" to="." method="_on_init_pressed"]
[connection signal="pressed" from="VBoxContainer/LoggingButtons/LogInfo" to="." method="_on_log_info_pressed"]
[connection signal="pressed" from="VBoxContainer/LoggingButtons/LogWarn" to="." method="_on_log_warn_pressed"]
[connection signal="pressed" from="VBoxContainer/LoggingButtons/LogError" to="." method="_on_log_error_pressed"]
[connection signal="pressed" from="VBoxContainer/LoggingButtons/LogDebug" to="." method="_on_log_debug_pressed"]
[connection signal="pressed" from="VBoxContainer/MetricsButtons/Increment" to="." method="_on_increment_pressed"]
[connection signal="pressed" from="VBoxContainer/MetricsButtons/Increment10" to="." method="_on_increment_10_pressed"]
[connection signal="pressed" from="VBoxContainer/MetricsButtons/Gauge" to="." method="_on_gauge_pressed"]
[connection signal="pressed" from="VBoxContainer/MetricsButtons/Histogram" to="." method="_on_histogram_pressed"]
[connection signal="pressed" from="VBoxContainer/TracingButtons/StartSpan" to="." method="_on_start_span_pressed"]
[connection signal="pressed" from="VBoxContainer/TracingButtons/EndSpan" to="." method="_on_end_span_pressed"]
[connection signal="pressed" from="VBoxContainer/TracingButtons/QuickSpan" to="." method="_on_quick_span_pressed"]
[connection signal="pressed" from="VBoxContainer/ContextButtons/SetUser" to="." method="_on_set_user_pressed"]
[connection signal="pressed" from="VBoxContainer/ContextButtons/SetContext" to="." method="_on_set_context_pressed"]
[connection signal="pressed" from="VBoxContainer/ContextButtons/SetTag" to="." method="_on_set_tag_pressed"]
[connection signal="pressed" from="VBoxContainer/OutputRow/ClearLog" to="." method="_on_clear_log_pressed"]
